--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "eslint-config-prettier": "^7.2.0",
     "express": "^4.17.0",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.16.1",
