Added test route for api and fixed node_modules folder

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "MyNewPass",
+    "password": "rootroot",
     "database": "passport_demo",
     "host": "127.0.0.1",
     "dialect": "mysql"
