--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.2",
+    "require": "^2.4.20",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
