--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "express": "^4.17.0",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.16.1",
+    "mysql": "^2.18.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "request": "^2.88.2",
     "sequelize": "^5.8.6"
+  },
+  "devDependencies": {
+    "eslint": "^7.19.0"
   }
 }
