--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.0",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.16.1",
+    "mysql": "^2.18.1",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
