--- a/config/config.json
+++ b/config/config.json
@@ -14,7 +14,7 @@
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable":"JAWS_DB_URL",
+    "use_env_variable":"JAWSDB_URL",
     "dialect": "mysql"
   }
 }
